# docs-posit-search

./: .gitignore  0-merge-search.py  1-upload-index.py  README.md  index.html  merge_data.yml  merge_search.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app-shiny/: _utils.py  app.py
app-vue/: README.md  index.html  package.json
app-vue/src/: App.vue
docs/: _quarto.yml  index.qmd
reports/: 01-crumbs.qmd  02-fetch-facets.qmd
